force-app/main/default/objects/Club_Fees__c/Club_Fees__c.object-meta.xml
<CustomObject>
    <label>Club Fee</label>
    <nameField>
        <label>Club Fees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>