force-app/main/default/objects/Club_Fees__c/fields/Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount__c</fullName>
    <label>Additional Discount</label>
    <summarizedField>Program_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Program_Payment__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Payment__c.Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>