force-app/main/default/objects/Club_Fees__c/fields/Club_Program__c.field-meta.xml
<CustomField>
    <fullName>Club_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Program</label>
    <referenceTo>Club_Program__c</referenceTo>
    <relationshipLabel>Club Fees</relationshipLabel>
    <relationshipName>Club_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>