force-app/main/default/objects/Club_Fees__c/fields/First_Kid__c.field-meta.xml
<CustomField>
    <fullName>First_Kid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Kid</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Club_Program__c</field>
            <operation>equals</operation>
            <valueField>Enrollment__c.Program__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Club Fees</relationshipLabel>
    <relationshipName>Club_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>