force-app/main/default/objects/Club_Fees__c/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <formula>Parent__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Email</label>
    <type>Text</type>
</CustomField>