force-app/main/default/objects/Club_Fees__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Parent__r.Phone__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>