force-app/main/default/objects/Club_Fees__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>IF(Total_Program_Fee__c -  Total_Payments__c&lt;0, 0,Total_Program_Fee__c -  Total_Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>