force-app/main/default/objects/Club_Fees__c/fields/Second_Kid_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Second_Kid_Enrollment__c</fullName>
    <formula>IF( OR(ISPICKVAL( Second_Kid__r.Enrollment_Status__c , &quot;Confirmed&quot;), ISPICKVAL( Second_Kid__r.Enrollment_Status__c , &quot;Pending&quot;)) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Kid Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>