force-app/main/default/objects/Club_Fees__c/fields/Total_Enrolled_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolled_Students__c</fullName>
    <formula>First_Kid_Enrollment__c + Second_Kid_Enrollment__c +  Third_Kid_Enrollment__c +  Fourth_Kid_Enrollment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Enrolled Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>