force-app/main/default/objects/Club_Fees__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summarizedField>Program_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Program_Payment__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Payment__c.Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>