force-app/main/default/objects/Club_Fees__c/fields/Total_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Fee__c</fullName>
    <formula>IF( Total_Enrolled_Students__c =1,  Club_Program__r.One_Kid_Fee__c -  Additional_Discount__c , 
IF(Total_Enrolled_Students__c =2,  Club_Program__r.Two_Kids_Fee__c - Additional_Discount__c , 
IF(Total_Enrolled_Students__c =3,  Club_Program__r.Three_Kids_Fee__c - Additional_Discount__c, 
IF(Total_Enrolled_Students__c =4,   Club_Program__r.Four_Kid_Fee__c - Additional_Discount__c,   
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>