force-app/main/default/objects/Club_Fees__c/validationRules/First_Kid_Parent_Child_relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Kid_Parent_Child_relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(First_Kid__r.Student__r.Parent_Name__r.Id != Parent__r.Id,   !ISBLANK( First_Kid__c ))</errorConditionFormula>
    <errorDisplayField>First_Kid__c</errorDisplayField>
    <errorMessage>Parent and Child are not related</errorMessage>
</ValidationRule>