force-app/main/default/objects/Club_Fees__c/validationRules/Fourth_Kid_Parent_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Fourth_Kid_Parent_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Fourth_Kid__r.Student__r.Parent_Name__r.Id != Parent__r.Id, !ISBLANK(  Fourth_Kid__c  ))</errorConditionFormula>
    <errorDisplayField>Fourth_Kid__c</errorDisplayField>
    <errorMessage>Parent and Child have no relationship</errorMessage>
</ValidationRule>