force-app/main/default/objects/Club_Fees__c/validationRules/Second_Kid_Parent_child_relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Kid_Parent_child_relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Second_Kid__r.Student__r.Parent_Name__r.Id != Parent__r.Id, !ISBLANK(  Second_Kid__c  ))</errorConditionFormula>
    <errorDisplayField>Second_Kid__c</errorDisplayField>
    <errorMessage>Parent and Child are not related. Pick a different child</errorMessage>
</ValidationRule>