force-app/main/default/objects/Club_Fees__c/validationRules/Third_Kid_Parent_Relation.validationRule-meta.xml
<ValidationRule>
    <fullName>Third_Kid_Parent_Relation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Third_Kid__r.Student__r.Parent_Name__r.Id != Parent__r.Id, !ISBLANK(   Third_Kid__c   ))</errorConditionFormula>
    <errorDisplayField>Third_Kid__c</errorDisplayField>
    <errorMessage>Parent and Child have no relationship</errorMessage>
</ValidationRule>