force-app/main/default/objects/Club_Fees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Note__c</columns>
    <columns>First_Kid__c</columns>
    <columns>Second_Kid__c</columns>
    <columns>Third_Kid__c</columns>
    <columns>Fourth_Kid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>