force-app/main/default/objects/Club_Fees__c/listViews/Ended_Programs.listView-meta.xml
<ListView>
    <fullName>Ended_Programs</fullName>
    <columns>NAME</columns>
    <columns>Total_Payments__c</columns>
    <columns>Total_Program_Fee__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Program_Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </filters>
    <label>Ended Programs</label>
</ListView>