force-app/main/default/objects/Club_Fees__c/listViews/Sunday_Volleyball_2022_23.listView-meta.xml
<ListView>
    <fullName>Sunday_Volleyball_2022_23</fullName>
    <columns>NAME</columns>
    <columns>First_Kid__c</columns>
    <columns>Second_Kid__c</columns>
    <columns>Total_Program_Fee__c</columns>
    <columns>Total_Payments__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Club_Program__c</field>
        <operation>contains</operation>
        <value>Sunday Volleyball 2022</value>
    </filters>
    <label>Sunday Volleyball 2022-23</label>
</ListView>