force-app/main/default/objects/Club_Fees__c/listViews/X23_Jan_May.listView-meta.xml
<ListView>
    <fullName>X23_Jan_May</fullName>
    <columns>NAME</columns>
    <columns>Parent_Email__c</columns>
    <columns>Total_Enrolled_Students__c</columns>
    <columns>Total_Program_Fee__c</columns>
    <columns>Total_Payments__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Club_Program__c</field>
        <operation>contains</operation>
        <value>Jan-May 2023</value>
    </filters>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>23 Jan-May</label>
</ListView>